fix: train my ai empty state in dark mode / AUTEN-2803

--- a/src/pages/automate/trainMyAi/TrainMyAiView.less
+++ b/src/pages/automate/trainMyAi/TrainMyAiView.less
@@ -94,6 +94,11 @@
         color: var(--neutral-grey-5);
     }
 
+    .badge {
+        background-color: var(--accessory-magenta-1, #faeaff);
+        color: var(--accessory-magenta-3, #6f0c86);
+    }
+
     @media (min-width: 1600px) {
         .container.enabled {
             grid-template-columns: 1fr 700px;
